@@ -1,3 +1,9 @@
+2011-05-05  Lorenzo Natale  <lorenzo.natale@iit.it>
+    * src/libYARP_OS/include/yarp/os/Run.h
+    * src/libYARP_OS/src/Run.cpp
+      removed subsequent attempts to connect to server, handle
+      cases in which the server is not available
+
 2011-04-28  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
 	* src/carriers/tcpros_carrier/TcpRosStream.h: add missing
